# beets-essentia-tensorflow

./: .gitignore  .pre-commit-config.yaml  LICENSE  hello.py  prompt-plan.md  pyproject.toml  spec.md  todo-checklist.md
.github/workflows/: ci.yml
src/beetsplug/essentia/: __init__.py
src/beetsplug/essentia_tensorflow/: __init__.py  audio_processor.py  model_manager.py
test/: input.py  test_audio_processor.py  test_essentia.py  test_integration.py  test_model_loader.py
